# TypeCheckingJavaInPhases

./: README.md  hefty-algebras.cabal
lang-java/app/: Main.hs
lang-java/lib/: Syntax.hs  SyntaxOld.hs  TypeCheck.hs  TypeCheckOld.hs
lang-java/tests/: Main.hs  ParsedJava.hs
lang-java/tests/JavaExamples/: ParsedJava.hs
lang-java/tests/JavaExamples/Graphs/: drawGraph.py  exampleGraph.py  importedobjectnew.txt  input.txt  varshadow.txt
lang-java/tests/JavaExamples/MinistatixTests/: Classes.hs  Expressions.hs  Packages.hs
lang-java/tests/JavaExamples/NotInMinistatix/: Expressions.hs
