cabal-version:          2.4
name:                   hefty-algebras
version:                0.1.0.0


-- Main library

library
    hs-source-dirs:     scope-graph/lib
    exposed-modules:    Free.Scope
                        Free.Error
                        Free.Logic.Exists
                        Free.Logic.Equals
                        Free.Logic.Generalize
                        Free.Logic.Or
                        Free
                        Data.Regex
                        Data.Term
    other-modules:      Elab
                        Hefty
    build-depends:      base >=4.14 && <5,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        ListLike
    default-language:   Haskell2010
    default-extensions: DerivingStrategies
                        TypeApplications
                        TypeOperators
                        RankNTypes
                        DeriveFunctor
                        StandaloneDeriving
                        KindSignatures
                        EmptyCase
                        MultiParamTypeClasses
                        GADTs
                        FunctionalDependencies
                        ScopedTypeVariables
                        QuantifiedConstraints
                        DataKinds
                        UndecidableInstances
                        FlexibleInstances
                        FlexibleContexts
                        IncoherentInstances
                        AllowAmbiguousTypes
                        LambdaCase
                        DeriveFoldable
                        DeriveGeneric
                        DeriveTraversable
                        DeriveAnyClass
                        PatternSynonyms
                        PartialTypeSignatures
    ghc-options:        -W
                        -O3
                        -threaded

test-suite scope-graph
    type:               exitcode-stdio-1.0
    main-is:            Tests.hs
    build-depends:      base >= 4.14,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        mtl >= 2.3.1,
                        HUnit ^>= 1.6.1,
                        hefty-algebras
    hs-source-dirs:     scope-graph/tests
    default-language:   Haskell2010
    default-extensions: TypeApplications
    other-modules:      Util
                        Unification
                        GraphConstruction
                        Resolution
                        RETest

-- ATerm parsing

library aterms
    hs-source-dirs:     aterm/lib
    exposed-modules:    ATerms.ATerm
                        ATerms.Lexer
                        ATerms.Parser
                        ATerms.Types
    build-depends:      base >=4.14 && <5,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        mtl >= 2.3.1,
                        array,
                        utf8-string,
                        data-default,
                        ListLike
    build-tools:        alex, happy
    default-language:   Haskell2010
    default-extensions: DerivingStrategies
                        TypeApplications
                        TypeOperators
                        RankNTypes
                        DeriveFunctor
                        StandaloneDeriving
                        KindSignatures
                        EmptyCase
                        MultiParamTypeClasses
                        GADTs
                        FunctionalDependencies
                        ScopedTypeVariables
                        QuantifiedConstraints
                        DataKinds
                        UndecidableInstances
                        FlexibleInstances
                        FlexibleContexts
                        IncoherentInstances
                        AllowAmbiguousTypes
                        LambdaCase
                        DeriveFoldable
                        DeriveGeneric
                        DeriveTraversable
                        DeriveAnyClass
                        PatternSynonyms
                        PartialTypeSignatures
    ghc-options:        -W
                        -O3
                        -threaded

test-suite aterm-tests
    main-is:            Main.hs
    type:               exitcode-stdio-1.0
    build-depends:      base >= 4.14,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        mtl >= 2.3.1,
                        HUnit ^>= 1.6.1,
                        dir-traverse,
                        text,
                        directory,
                        aterms
    hs-source-dirs:     aterm/tests
    default-language:   Haskell2010
    default-extensions: TypeApplications
    other-modules:      Tests
                        Integration


-- java

library java-lib
    hs-source-dirs:     lang-java/lib
    exposed-modules:    Syntax
                        TypeCheck
    build-depends:      base >=4.14 && <5,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        hefty-algebras,
                        aterms
    default-language:   Haskell2010
    default-extensions: TypeApplications
                        TypeOperators
                        ScopedTypeVariables
                        LambdaCase
                        FlexibleContexts
    ghc-options:        -W
                        -O3
                        -threaded

executable java
    main-is:            Main.hs
    build-depends:      base >= 4.14,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        java-lib

    hs-source-dirs:     lang-java/app
    default-language:   Haskell2010
    default-extensions: TypeApplications
                        TypeOperators
                        ScopedTypeVariables
                        LambdaCase
                        FlexibleContexts
    ghc-options:        -O3
                        -threaded

test-suite java-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-depends:      base >= 4.14,
                        transformers >= 0.5.6.2,
                        mtl >= 2.3.1,
                        HUnit ^>= 1.6.1,
                        hefty-algebras,
                        java-lib
    hs-source-dirs:     lang-java/tests
                        lang-java/tests/JavaExamples
    default-language:   Haskell2010
    other-modules:      ParsedJava
                        MinistatixTests.Classes